--- a/Audio ChromoTests/Info.plist
+++ b/Audio ChromoTests/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Lato-Bold.tff</string>
+		<string>Lato-Regular.tff</string>
+		<string>Roboto-Regular.tff</string>
+		<string>Roboto-Bold.tff</string>
+		<string>Ubuntu-Regular.tff</string>
+		<string>Ubuntu-Bold.tff</string>
+		<string>NotoSans-Bold.ttf</string>
+		<string>NotoSans-Regular.ttf</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
